--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "json2csv": "^6.0.0-alpha.2",
     "mongoose": "^6.1.1",
     "nodemon": "^2.0.15",
     "puppeteer": "^22.11.0"
